# khazaur

./: .gitignore  CNAME  Cargo.toml  PKGBUILD  PKGBUILD-git  README.md  _config.yml  index.md
.github/workflows/: jekyll.yml
_layouts/: default.html
_sass/: base.scss  buttons.scss  cards.scss  docs.scss  hero.scss  misc.scss  variables.scss
assets/css/: style.scss
docs/: COMMANDS.md  CONFIGURATION.md  GITHUB_PAGES.md  RETRY.md
src/: cache.rs  config.rs  dirs.rs  error.rs  history.rs  main.rs  resolver.rs
src/aur/: client.rs  download.rs  mod.rs  package.rs  rate_limit.rs  retry.rs
src/cli/: args.rs  install.rs  interactive.rs  mod.rs  optional_deps.rs  package_source.rs  search.rs  selector.rs  source_finder.rs
src/cli/args/: backup.rs  clean.rs  completions.rs  config_cmd.rs  downgrade.rs  editor.rs  health.rs  history_cmd.rs  mirrors.rs  mod.rs  orphans.rs  query.rs  remove.rs  repo.rs
src/cli/args/tree/: data.rs  gui.rs  mod.rs  tui.rs
src/cli/install/: aur_install.rs  mod.rs  system_upgrade.rs  version_utils.rs
src/debian/: mod.rs
src/debtap/: mod.rs
src/flatpak/: install.rs  mod.rs  remotes.rs  search.rs  types.rs  updates.rs
src/pacman/: mod.rs  operations.rs  query.rs  repos.rs
src/pgp/: key_handler.rs  mod.rs
src/snap/: mod.rs
src/ui/: editor.rs  format.rs  mod.rs  progress.rs  prompt.rs  select.rs  viewer.rs
